# TideSignal-InvestmentResearch

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.sdd/: experience.md  project.json  status.json  tasks.json
.sdd/bad-cases/: Bad-Case总结.md
.sdd/bug-logs/: T-001.md  T-008.md  T-009.md  T-010.md  T-011.md  T-012.md  T-013.md  T-015.md  T-018.md  T-020.md  T-026.md
.sdd/developer-reports/: T-009-report.md  T-010-report.md  T-012-P1-report.md  T-012-P2-report.md  T-012-P3-report.md  T-012-P4-report.md  T-012-fix-report.md  T-012-plan.md  T-013-report.md  T-014-P2-completion.md  T-014-P2-plan.md  T-014-completion.md  T-014-plan.md  T-015-completion.md  T-015-plan.md  T-016-completion.md  T-016-plan.md  T-017-completion.md  T-017-plan.md  T-018-completion.md  T-018-plan.md  T-025-completion.md  T-025-plan.md  T-026-completion.md  T-026-plan.md  T-027-completion.md  T-027-plan.md  T-028-completion.md  T-028-plan.md
.sdd/test-reports/: T-009-report.md  T-010-report.md  T-011b-hotspot-acceptance.md  T-019-ingestion-report.md  T-024-ingestion-report.md  acceptance-T-019-result.md  acceptance-T-028-result.md  acceptance-roadmap-T-014-P2-result.md  acceptance-roadmap-T-014-P2.md  acceptance-roadmap-T-014.md  acceptance-roadmap-T-015.md  acceptance-roadmap-T-016-result.md  acceptance-roadmap-T-016.md  acceptance-roadmap-T-017.md  acceptance-roadmap-T-018-result.md  acceptance-roadmap-T-018.md  acceptance-roadmap-T-020-P1-result.md  acceptance-roadmap-T-020-P1.md  test-T-001.md  (+34 more)
backend/: .env.example
docs/: PRD.md  Plan.md  api-contracts.md  deployment-demo.md  knowledge-base-ingestion.md  startup.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
(+431 files in other folders)
